--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 /* Custom Dhivehi font imports */
 @font-face {
   font-family: "MV-Waheed";
-  src: url("fonts/MVWaheed.ttf") format("truetype");
+  src: url("public/fonts/MVWaheed.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
