--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 
 @font-face {
   font-family: "Faseyha";
-  src: url("public/fonts/faseyha.TTF") format("truetype");
+  src: url("public/fonts/Faruma.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
